<resources>
    <string name="app_name">Fabook</string>
    <string name="hint_email_phone">Email and phone</string>
    <string name="hint_pass">Password</string>
    <string name="text_login">Log in</string>
    <!--Add element  <u></u>  to underline text-->
    <string name="text_sign_up"><u>Sign up for facebook</u></string>
    <string name="text_forgot_pass"><u>Forgot password?</u></string>
</resources>
