<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/blue">
    <ImageView
        android:id="@+id/img"
        android:layout_marginBottom="@dimen/edit_margin_bottom"
        android:layout_marginRight="@dimen/edit_margin_right"
        android:layout_marginLeft="@dimen/edit_margin_left"
        android:layout_marginTop="60dp"
        android:background="@drawable/image_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/linear"
        android:layout_below="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText

            android:id="@+id/email"
            android:padding="@dimen/text_padding"
            android:background="@drawable/custom_login"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/edit_margin_top"
            android:layout_marginLeft="@dimen/edit_margin_left"
            android:layout_marginRight="@dimen/edit_margin_right"
            android:layout_marginBottom="@dimen/edit_margin_bottom"
            android:layout_below="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_phone"/>
        <EditText

            android:id="@+id/pass"
            android:padding="@dimen/text_padding"
            android:background="@drawable/custom_login"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/edit_margin_top"
            android:layout_marginLeft="@dimen/edit_margin_left"
            android:layout_marginRight="@dimen/edit_margin_right"
            android:layout_marginBottom="@dimen/edit_margin_bottom"
            android:layout_below="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"/>
        <Button

            android:id="@+id/button"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_large"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/text_login"
            android:background="@drawable/custom_button"
            android:layout_marginBottom="@dimen/edit_margin_bottom"
            android:layout_marginRight="@dimen/edit_margin_right"
            android:layout_marginLeft="@dimen/edit_margin_left"
            android:layout_marginTop="@dimen/edit_margin_top"
            android:layout_below="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:text="@string/text_forgot_pass"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/text_sign_up"
        android:textColor="@color/white" />

    <!--Insert image-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_alignEnd="@+id/img"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp"
        android:layout_alignRight="@+id/img" />
        <!--link to image-->
        app:srcCompat="@drawable/help1"
        android:layout_alignRight="@+id/img" />

</RelativeLayout>